--- a/newfolder/responsive.html
+++ b/newfolder/responsive.html
@@ -8,7 +8,7 @@ Responsive Image</title>
 body,html{
 width:1o0%;
 height:100%;
-background-image:url(nanital.jpg);
+background-image:url(Nainital.jpg);
 background-size:cover;
 background-repeat:no-repeat;
 }
