--- a/newfolder/responsive.html
+++ b/newfolder/responsive.html
@@ -18,7 +18,7 @@ background-repeat:no-repeat;
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 </head>
 <body>
-   <h1 class="text-uppercase" style="color:#ff3399">this is Naini Lack</h1>
-   <h2 class="text-lowercase" style="color:#ac00e6">THuminity still Exist</h2>
+   <h1 class="text-uppercase" style="color:#ff0000">this is Naini Lack</h1>
+   <h2 class="text-lowercase" style="color:#ffff00">THuminity still Exist</h2>
 </body>
 </html>
