--- a/flex.html
+++ b/flex.html
@@ -2,27 +2,7 @@
 <head>
 <title></title>
 </head>
-<style>
-img{
-width:300px;
-height:300px;
-margin:5px;
-transition:all 2s;
-box-shadow:5px 10px #888888;
-}
-img:hover{
-transform:translate(50px, 100px) scale(2);
-}
-#sel {
-  
-  height:30px;
-  width: 50px;
-}
-#sel:hover {
-  background-color: coral;
-  width:1500px;
-   border-radius: 50px;
-}
+<style src="flex.css">
 </style>
 <body>
 <div id="sel">
