--- a/flex.html
+++ b/flex.html
@@ -2,8 +2,7 @@
 <head>
 <title></title>
 </head>
-<style src="flex.css">
-</style>
+<link rel="stylesheet" href="flex.css"> 
 <body>
 <h2>Assinment</h2><br></br>
 </div>
