--- a/Index.html
+++ b/Index.html
@@ -2,48 +2,50 @@
 <html>
 <head>
 <style>
-div{width: 70%;
- border: 20px solid #333;
- padding: 8px 12px; 
-background-color:lightpink;
+div{width: 45%;
+ border: 20px solid #ffff00;
+ padding: 6px 11px; 
+background-color:gray;
 }
 </style>
 </head>
 <body>
 <div>
-<h2 align="center">Nikhil Vinay</h2>
-<h4 align="center">Email-id: nikhilvinay1212200@gmail.com</h4>
-<table align="center" width="50%" bgcolor="silver" 
-border="10px">
+<h2 align="center">ANURAG KUMAR</h2>
+
+<table align="center" width="50%" bgcolor="red" 
+border="8px">
 <tr>
 <th>S.NO</th>
 <th>Class</th>
 <th>Marks</th>
-<th>Board/Collage</th>
+<th>Board/College</th>
 <th>Year of passing</th>
 </tr>
 <tr>
 <td>1.</td>
 <th>Matriculation</th>
-<td>80%</td>
-<td>Bihar</td>
-<td>2016</td>
+<td>92%</td>
+<td>CBSE</td>
+<td>2017</td>
 </tr>
 <tr>
 <td>2.</td>
 <th>Intermediate</th>
-<td>69.5%</td>
-<td>Bihar</td>
-<td>2018</td>
+<td>73%</td>
+<td>uttarpradesh Board</td>
+<td>2019</td>
 </tr>
 <tr>
 <td>3.</td>
 <th>B-Tech</th>
 <td>----</td>
 <td>NIT,Patna</td>
-<td>2022</td>
+<td>2023</td>
 </tr>
 <tr>
-</table></div>
+</table>
+ <h4 align="center">Email-id: anuragkohli2223@gmail.com</h4>
+ </div>
 </body>
 </html>
