--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@ background-color:gray;
 <div>
 <h2 align="center">ANURAG KUMAR</h2>
 
-<table align="center" width="50%" bgcolor="red" 
+<table align="center" width="50%" bgcolor="white" 
 border="8px">
 <tr>
 <th>S.NO</th>
