--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
 div{width: 45%;
  border: 20px solid #ffff00;
  padding: 6px 11px; 
-background-color:gray;
+background-color:blue;
 }
 </style>
 </head>
