--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
 <style>
 div{width: 45%;
- border: 20px solid #ffff00;
+ border: 20px solid gray;
  padding: 6px 11px; 
 background-color:blue;
 }
