--- a/Github.html
+++ b/Github.html
@@ -5,12 +5,12 @@
 <style type="text/css">
 h1,h2,h3{
 color:#621940;
-font-family:verdana;}
+font-family:georgia;}
 h2{ text-decoration:underline;}
 #div1{ margin: 0px 100px 0px 100px;}
 h1{ text-align:center;
 text-decoration:underline;}
-p{color:#843b62; }
+p{color:#800000; }
 </style>
 </head> 
 <body> 
