--- a/Github.html
+++ b/Github.html
@@ -4,7 +4,7 @@
 <head>
 <style type="text/css">
 h1,h2,h3{
-color:#621940;
+color:#ff0000;
 font-family:georgia;}
 h2{ text-decoration:underline;}
 #div1{ margin: 0px 100px 0px 100px;}
