--- a/newfolder/responsive.html
+++ b/newfolder/responsive.html
@@ -19,6 +19,6 @@ background-repeat:no-repeat;
 </head>
 <body>
    <h1 class="text-uppercase" style="color:#ff0000">this is Naini Lack</h1>
-   <h2 class="text-lowercase" style="color:#ffff00">THuminity still Exist</h2>
+   <h2 class="text-lowercase" style="color:#00ff00">Huminity still Exist</h2>
 </body>
 </html>
